<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Add new Task</string>
    <string name="enter_task_name">enter task name</string>
    <string name="enter_task_description">enter task description</string>
    <string name="select_time">Select Time:</string>
    <string name="add">Add</string>
    <string name="to_do_list">To Do List</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="mode">Mode</string>
    <string name="light">Light</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="mode_array">
        <item>Light</item>
        <item>Night</item>
    </string-array>
</resources>